# fastapi-prac-001

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
scripts/: docker-build.sh  docker-run.sh  server-up.sh
